prova debug a tre colnne

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
   <!-- header  -->
 
   <header>
-    <div id="nav" class="container debug" >
-      
+    <div id="nav" class="container  debug" >
+      <div class="row">
+        <div class="col-lg-4 debug">1</div>
+        <div class="col-lg-4 debug">2</div>
+        <div class="col-lg-4 debug">3</div>
+      </div>
+
+    
+
+
     </div>
 
   </header>
