--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -19,9 +20,11 @@
   <header>
     <div id="nav" class="container  debug" >
       <div class="row">
-        <div class="col-lg-4 debug">1</div>
-        <div class="col-lg-4 debug">2</div>
-        <div class="col-lg-4 debug">3</div>
+        <div class="col-lg-4 col-xs-4 debug">a</div>
+        <div class="col-lg-4  col-xs-4  debug">a</div>
+        <div class="col-lg-4 col-xs-4  debug">a</div>
+
+        
       </div>
 
     
@@ -30,6 +33,8 @@
     </div>
 
   </header>
+
+  <!-- fine header  -->
 
   <!-- main  -->
 
