trasportato esercizio da prove a parte

--- a/index.html
+++ b/index.html
@@ -1,77 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2? family = Open + Sans: wght @ 300 & family = Roboto: ital @ 1 & family = Source + Sans + Pro: ital, wght @ 1,600 & display = swap " rel=" stylesheet ">
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+
+
     <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+    <title>bootstrap partenza</title>
 </head>
+
 <body>
 
-  <!-- header  -->
+    <!-- iniazio header  -->
 
-  <header>
-    <div id="nav" class="container  debug" >
-      <div class="row">
-        <div class="col-lg-4 col-xs-4 debug">a</div>
-        <div class="col-lg-4  col-xs-4  debug">a</div>
-        <div class="col-lg-4 col-xs-4  debug">a</div>
+    <header>
 
-        
-      </div>
+        <div class="header-up ">
+            <div class="container ">
+                <div class="row">
 
-    
-
-
-    </div>
-
-  </header>
-
-  <!-- fine header  -->
-
-  <!-- main  -->
-
-  <main>
-    <!-- viport 1 -->
-    <div id="jambatron">
-
-    </div>
+                    <div class="col-xs-2 col-md-2  ">
+                        <div class="hidden-xs hidden-sm">
+                            <img src="" alt=""> logo
+                        </div>
 
 
 
-    <!-- viport 2 -->
-    <!-- viport 3 -->
-    <!-- viport 4 -->
-    <!-- viport 5 -->
-    <!-- viport 6 -->
-    <!-- viport 7 -->
-    <!-- vioport 8  -->
-
-  </main>
-
-  <!-- footer  -->
+                    </div>
 
 
-  <footer>
+                    <div class="col-xs-5 col-md-5  text-center  ">
 
-  </footer>
+                        <div class="hidden-xs ">
+                            link-centrali
+                        </div>
+                        <div class="visible-xs ">
+                            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                        </div>
+
+                    </div>
+
+                    <div class="col-xs-5 col-md-5  text-right  ">
+                        <div class="hidden-xs  ">
+                            link-dx
+                        </div>
 
 
 
 
+                    </div>
+
+
+
+                </div>
+            </div>
+
+
+        </div>
+        <div class="header-bottom">
+
+        </div>
 
 
 
 
 
 
+    </header>
+
+
+    <!-- fine header  -->
+
+    <main>
+        <!-- vioport 1  -->
+
+        <div id="jambatron">
+            <div class="container">
+                <div class="row text-center">
+
+                    <div class="col-xs-12 col-md-6 debug">
+                        <h1>ale
+
+                        </h1>
+                        <p>sono pronto a imparare </p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 debug">
+                        <h1>ale</h1>
+                        <p>ale</p>
+                        <div class="img">
+                            s
+
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+        <!-- fine vioport1  -->
+
+        <!-- vioport 2 loghi business  -->
+
+        <section id="loghi">
+            <div class="container text-center">
+                <div class="row">
+
+                    <div class="col-xs-12 debug">
+                        innovate
+                    </div>
+                </div>
+
+                <!-- partners -->
+
+                <div class="row text-center no-gutters">
+                    <div class="col-xs-12 text-uppercase">
+                        <h6>innovative businesses trust digitalocean</h6>
+                    </div>
+                    <div class="col-xs-6 col-sm-2">
+
+                        <img src="" alt="docker">
+                    </div>
+                    <div class="col-xs-6 col-sm-2">
+
+                        <img src="" alt="gitlab">
+                    </div>
+                    <div class="col-xs-6 col-sm-2">
+
+                        <img src="" alt="slack">
+                    </div>
+
+                    <img src="" alt="hashi">
+                </div>
+                <div class="col-xs-6 col-sm-2">
+
+                    <img src="" alt="wework">
+                </div>
+                <div class="col-xs-6 col-sm-2">
+
+                    <img src="" alt="splunk">
+                </div>
+                <div class="col-xs-12">
+                    <a href="#">View customer stories ></a>
+                </div>
+
+            </div>
+
+            </div>
+        </section>
+
+        <!-- fine viport 2 loghi  -->
+
+
+        <!-- vioport 3 Deploy -->
+
+        <section id="deploy">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <ul>
+                            <li>Deploy</li>
+                            <li>Manage</li>
+                            <li>Scale</li>
+                            <li>Monitor</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4 col-xs-12 debug">ale</div>
+
+
+                    <div class="col-md-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4 col-xs-12 debug">ale</div>
+
+
+
+
+
+
+                </div>
+            </div>
+
+
+
+
+
+
+        </section>
 
 
 
@@ -83,15 +208,83 @@
 
 
 
-   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-   integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
-   crossorigin="anonymous"></script>
- <!-- Include all compiled plugins (below), or include individual files as needed -->
- <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-   integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-   crossorigin="anonymous"></script>
 
-  
+
+
+
+
+
+
+
+
+
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
