--- a/index.html
+++ b/index.html
@@ -199,6 +199,28 @@
         </section>
 
 
+        <!-- vioport 4 designated for developer  -->
+
+        <section id="developer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12  text-center">
+                        <h2>
+                            designate with---
+
+                        </h2>
+                        <p>
+                            prove
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+
 
 
 
