--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                         <h1>ale
 
                         </h1>
-                        <p>sono pronto a imparare </p>
+                        <p>prova </p>
                     </div>
                     <div class="col-xs-12 col-md-6 debug">
                         <h1>ale</h1>
                         <p>ale</p>
                         <div class="img">
-                            s
+                            prova
 
                         </div>
                     </div>
@@ -110,6 +110,9 @@
         <!-- fine vioport1  -->
 
         <!-- vioport 2 loghi business  -->
+
+
+        <!-- fine viport 2 loghi  -->
 
         <section id="loghi">
             <div class="container text-center">
@@ -127,38 +130,37 @@
                         <h6>innovative businesses trust digitalocean</h6>
                     </div>
                     <div class="col-xs-6 col-sm-2">
-
+                        <!-- docker-git  -->
                         <img src="" alt="docker">
                     </div>
                     <div class="col-xs-6 col-sm-2">
-
+                        <!-- slack-wework -->
                         <img src="" alt="gitlab">
                     </div>
                     <div class="col-xs-6 col-sm-2">
-
+                        <!-- hashi2-splunk -->
                         <img src="" alt="slack">
                     </div>
+                    <div class="col-xs-6 col-sm-2">
+                        <!-- docker-git  -->
+                        <img src="" alt="hashi">
+                    </div>
+                    <div class="col-xs-6 col-sm-2">
+                        <!-- slack-wework -->
+                        <img src="" alt="wework">
+                    </div>
+                    <div class="col-xs-6 col-sm-2">
+                        <!-- hashi2-splunk -->
+                        <img src="" alt="splunk">
+                    </div>
+                    <div class="col-xs-12">
+                        <a href="#">View customer stories ></a>
+                    </div>
 
-                    <img src="" alt="hashi">
                 </div>
-                <div class="col-xs-6 col-sm-2">
-
-                    <img src="" alt="wework">
-                </div>
-                <div class="col-xs-6 col-sm-2">
-
-                    <img src="" alt="splunk">
-                </div>
-                <div class="col-xs-12">
-                    <a href="#">View customer stories ></a>
-                </div>
-
-            </div>
 
             </div>
         </section>
-
-        <!-- fine viport 2 loghi  -->
 
 
         <!-- vioport 3 Deploy -->
@@ -206,17 +208,41 @@
                 <div class="row">
                     <div class="col-xs-12  text-center">
                         <h2>
-                            designate with---
+                            designate with for developer
 
                         </h2>
                         <p>
                             prove
                         </p>
+                        <div class="item text-center">
+                            <div class="img">
+                                prova
+
+                            </div>
+                            <div class="txt-img">
+                                serve 55 second
+                            </div>
+
+                        </div>
+
 
                     </div>
                 </div>
+
+
+
             </div>
 
+
+        </section>
+
+
+        <!-- vioprt 5 feature you businnes  -->
+
+        <section id="businnes">
+            <div class="container">
+
+            </div>
 
         </section>
 
