--- a/index.html
+++ b/index.html
@@ -241,10 +241,37 @@
 
         <section id="businnes">
             <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 text-center debug">
+                        the features you businnes
+                    </div>
+
+                    <div class="container text-center">
+                        <div class="row">
+
+                            <div class="col-xs-12 col-sm-4 col-md-4  debug">a</div>
+                            <div class="col-xs-12 col-sm-4 col-md-4  debug">b</div>
+                            <div class="col-xs-12 col-sm-4 col-md-4  debug">c</div>
+
+
+
+
+                        </div>
+
+                    </div>
+
+
+
+
+
+                </div>
 
             </div>
 
         </section>
+
+
+
 
 
 
