--- a/index.html
+++ b/index.html
@@ -271,7 +271,25 @@
         </section>
 
 
+        <!-- viport 6 service customers  -->
 
+        <section id="service">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-xs-12 debug">
+                        service you costum
+
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sx-12 col-md-6 debug">sx</div>
+                    <div class="col-sx-12 col-md-6 debug">dx</div>
+                </div>
+
+            </div>
+
+        </section>
 
 
 
