--- a/index.html
+++ b/index.html
@@ -292,6 +292,53 @@
         </section>
 
 
+        <!-- vioport 7 developement teams  -->
+
+        <section id="teams">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12  text-center">
+                        <h2>
+                            development teams love
+
+                        </h2>
+
+                        <div class="item text-center">
+                            <div class="img">
+                                rocket box
+
+                            </div>
+                            <div class="txt-img">
+                                serve 55 second
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </section>
+
+        <!-- viport 8 get started  -->
+
+        <section id="started">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-xs-12 debug">get started</div>
+
+                    <div class="col-xs-12 debug">botton</div>
+                </div>
+
+        </section>
+
+
+
+
 
 
 
@@ -313,6 +360,13 @@
 
 
     </main>
+
+
+    <!-- fine main  -->
+
+    <footer>
+
+    </footer>
 
 
 
