--- a/index.html
+++ b/index.html
@@ -365,6 +365,18 @@
     <!-- fine main  -->
 
     <footer>
+        <section id="">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 debug"></div>
+                    <div class="col-md-2 debug"></div>
+                    <div class="col-md-2 debug"></div>
+                    <div class="col-md-2 debug"></div>
+                    <div class="col-md-2 debug"></div>
+                </div>
+            </div>
+
+        </section>
 
     </footer>
 
