--- a/index.html
+++ b/index.html
@@ -365,14 +365,14 @@
     <!-- fine main  -->
 
     <footer>
-        <section id="">
-            <div class="container">
+        <section id="footer">
+            <div class="container text-center">
                 <div class="row">
-                    <div class="col-md-4 debug"></div>
-                    <div class="col-md-2 debug"></div>
-                    <div class="col-md-2 debug"></div>
-                    <div class="col-md-2 debug"></div>
-                    <div class="col-md-2 debug"></div>
+                    <div class="col-md-4 debug">link</div>
+                    <div class="col-md-2 debug">link</div>
+                    <div class="col-md-2 debug">link</div>
+                    <div class="col-md-2 debug">link</div>
+                    <div class="col-md-2 debug">link</div>
                 </div>
             </div>
 
