aggiunta border nasv left loghi

--- a/index.html
+++ b/index.html
@@ -169,21 +169,22 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
-
-                        <ul>
-                            <li>Deploy</li>
-                            <li>Manage</li>
-                            <li>Scale</li>
-                            <li>Monitor</li>
+                        <ul class="nav nav-tabs">
+                            <li role="presentation" class=""><a href="#">Deploy</a></li>
+                            <li role="presentation"><a href="#">Manage</a></li>
+                            <li role="presentation"><a href="#">Secure</a></li>
+                            <li role="presentation"><a href="#">Scale</a></li>
+                            <li role="presentation"><a href="#">Monitor</a></li>
                         </ul>
+
                     </div>
 
-                    <div class="col-md-4 col-xs-12 debug">ale</div>
-                    <div class="col-md-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 debug">ale</div>
 
 
-                    <div class="col-md-4 col-xs-12 debug">ale</div>
-                    <div class="col-md-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4  col-sm-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4  col-sm-4 col-xs-12 debug">ale</div>
 
 
 
