--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <div class="col-xs-2 col-md-2  ">
                         <div class="hidden-xs hidden-sm">
-                            <img src="" alt=""> logo
+                            <img class="loghi" src="img/logo.png" alt="logo">
                         </div>
 
 
