--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@
 
         </section>
 
+        <!-- fine main  -->
+
 
 
 
@@ -369,11 +371,13 @@
         <section id="footer">
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-md-4 debug">link</div>
-                    <div class="col-md-2 debug">link</div>
-                    <div class="col-md-2 debug">link</div>
-                    <div class="col-md-2 debug">link</div>
-                    <div class="col-md-2 debug">link</div>
+                    <div class="col-md-4 col-sm-6 debug">link</div>
+                    <div class="col-md-2  col-sm-6 debug">link</div>
+                    <div class="col-md-2 col-sm-6 debug">link</div>
+                    <div class="col-md-2  col-sm-6 debug">link</div>
+                    <div class="col-md-2  col-sm-6 debug">link</div>
+                    <div class=" col-sm-6 debug">link</div>
+
                 </div>
             </div>
 
