--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="row">
 
                     <div class="col-xs-2 col-md-2  ">
-                        <div class="hidden-xs hidden-sm">
+                        <div class="visible-xs">
                             <img class="loghi" src="img/logo.png" alt="logo">
                         </div>
 
@@ -42,15 +42,16 @@
                         <div class="hidden-xs ">
                             link-centrali
                         </div>
-                        <div class="visible-xs ">
-                            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-                        </div>
+
 
                     </div>
 
                     <div class="col-xs-5 col-md-5  text-right  ">
                         <div class="hidden-xs  ">
                             link-dx
+                        </div>
+                        <div class=" visible-md ">
+                            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                         </div>
 
 
@@ -374,9 +375,9 @@
                     <div class="col-md-4 col-sm-6 debug">link</div>
                     <div class="col-md-2  col-sm-6 debug">link</div>
                     <div class="col-md-2 col-sm-6 debug">link</div>
-                    <div class="col-md-2  col-sm-6 debug">link</div>
-                    <div class="col-md-2  col-sm-6 debug">link</div>
-                    <div class=" col-sm-6 debug">link</div>
+                    <div class="col-md-2   debug">link</div>
+                    <div class="col-md-2  debug">link</div>
+
 
                 </div>
             </div>
