fissaggio nav-bar

--- a/index.html
+++ b/index.html
@@ -26,22 +26,31 @@
         <div class="header-up ">
             <div class="container ">
                 <div class="row">
+                    <div class="">
+                        <div class="col-xs-2 col-md-2  ">
+                            <div class="hidden-sm">
+                                <img class="loghi" src="img/logo.png" alt="logo">
 
-                    <div class="col-xs-2 col-md-2  ">
-                        <div class="visible-xs">
-                            <img class="loghi" src="img/logo.png" alt="logo">
+                            </div>
+
+
+
+
+
+
                         </div>
-
 
 
                     </div>
 
 
+
                     <div class="col-xs-5 col-md-5  text-center  ">
 
-                        <div class="hidden-xs ">
+                        <div class="hidden-xs hidden-sm ">
                             link-centrali
                         </div>
+
 
 
                     </div>
@@ -50,7 +59,7 @@
                         <div class="hidden-xs  ">
                             link-dx
                         </div>
-                        <div class=" visible-md ">
+                        <div class=" visible-xs ">
                             <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                         </div>
 
