--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <div class="col-xs-5 col-md-5  text-center  ">
 
-                        <div class="hidden-xs hidden-sm ">
+                        <div class="hidden-xs hidden-sm hidden-md ">
                             link-centrali
                         </div>
 
