--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="">
                         <div class="col-xs-2 col-md-2  ">
-                            <div class="hidden-sm">
+                            <div class="">
                                 <img class="loghi" src="img/logo.png" alt="logo">
 
                             </div>
@@ -56,10 +56,10 @@
                     </div>
 
                     <div class="col-xs-5 col-md-5  text-right  ">
-                        <div class="hidden-xs  ">
-                            link-dx
+                        <div class="hidden-xs hidden-md hidden-sm ">
+                            link-dx-
                         </div>
-                        <div class=" visible-xs ">
+                        <div class=" visible-xs visible-sm visible-md  ">
                             <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                         </div>
 
