prove link centrali nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2? family = Open + Sans: wght @ 300 & family = Roboto: ital @ 1 & family = Source + Sans + Pro: ital, wght @ 1,600 & display = swap " rel=" stylesheet ">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -48,7 +49,30 @@
                     <div class="col-xs-5 col-md-5  text-center  ">
 
                         <div class="hidden-xs hidden-sm hidden-md ">
-                            link-centrali
+                            <div class="link-cetral">
+                                <ul>
+                                    <li>
+                                        <a href="#">software <i class="fas fa-angle-down"></i></a></a>
+
+                                    </li>
+                                    <li>
+                                        <a href="#">Pricing</a>
+
+                                    </li>
+                                    <li>
+                                        <a href="#">resourses <i class="fas fa-angle-down"></i></a></a>
+
+                                    </li>
+                                    <li>
+                                        <a href="#">partner <i class=""></i></a></a>
+                                    </li>
+                                    <li>
+                                        <a href="#">abaut <i class=""></i></a></a>
+                                    </li>
+                                </ul>
+
+                            </div>
+
                         </div>
 
 
