--- a/index.html
+++ b/index.html
@@ -52,23 +52,21 @@
                             <div class="link-cetral">
                                 <ul>
                                     <li>
-                                        <a href="#">software <i class="fas fa-angle-down"></i></a></a>
+                                        <a href="#">products <i class="fas fa-angle-down"></i></a></a>
 
                                     </li>
                                     <li>
-                                        <a href="#">Pricing</a>
+                                        <a href="#">Customers</a>
 
                                     </li>
                                     <li>
-                                        <a href="#">resourses <i class="fas fa-angle-down"></i></a></a>
+                                        <a href="#">Community <i class="fas fa-angle-down"></i></a></a>
 
                                     </li>
                                     <li>
-                                        <a href="#">partner <i class=""></i></a></a>
+                                        <a href="#">Pricing <i class=""></i></a></a>
                                     </li>
-                                    <li>
-                                        <a href="#">abaut <i class=""></i></a></a>
-                                    </li>
+
                                 </ul>
 
                             </div>
@@ -81,7 +79,27 @@
 
                     <div class="col-xs-5 col-md-5  text-right  ">
                         <div class="hidden-xs hidden-md hidden-sm ">
-                            link-dx-
+                            <div class="link-cetral">
+                                <ul>
+                                    <li>
+                                        <a href="#">Docs <i class="fas fa-angle-down"></i></a></a>
+
+                                    </li>
+
+                                    <li>
+                                        <a href="#">Supports <i class="fas fa-angle-down"></i></a></a>
+
+                                    </li>
+                                    <li>
+                                        <a href="#">login <i class=""></i></a></a>
+                                    </li>
+                                    <li>
+                                        <button type="submit" class="btn btn-default">Sign Up</button>
+
+                                    </li>
+                                </ul>
+
+                            </div>
                         </div>
                         <div class=" visible-xs visible-sm visible-md  ">
                             <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
