--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <!-- vioport 4 designated for developer  -->
 
         <section id="developer">
-            <div class="container">
+            <div class="container text-center">
                 <div class="row">
                     <div class="col-xs-12  text-center">
                         <h2>
@@ -267,16 +267,44 @@
                         <p>
                             prove
                         </p>
-                        <div class="item text-center">
-                            <div class="img">
-                                prova
 
-                            </div>
-                            <div class="txt-img">
-                                serve 55 second
+
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
+
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img src="img/slide.jpg" alt="...">
+                                    <div class="carousel-caption">
+                                        ...
+                                    </div>
+                                </div>
+
+
+                                ...
                             </div>
 
+                            <!-- Controls -->
+                            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
+                        <div class="txt-img">
+                            serve 55 second
+                        </div>
+
+
 
 
                     </div>
