--- a/index.html
+++ b/index.html
@@ -138,25 +138,47 @@
             <div class="container">
                 <div class="row text-center">
 
-                    <div class="col-xs-12 col-md-6 debug">
-                        <h1>ale
+                    <div class="col-xs-12 col-md-6 debug ">
+                        <h1>
+                            the simplest cloud platformfor developers & teams
 
                         </h1>
-                        <p>prova </p>
+                        <p>We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more. </p>
                     </div>
-                    <div class="col-xs-12 col-md-6 debug">
-                        <h1>ale</h1>
-                        <p>ale</p>
-                        <div class="img">
-                            prova
+                    <div class="col-xs-12 col-md-6 debug ">
+                        <h1>
+                            Deploy you app in seconds.
+                        </h1>
+                        <h2>
+                            get stared now
+                        </h2>
+                        <form>
+                            <div class="form-group">
 
-                        </div>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">create you accaunt</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">
+                            
+                            <i class="fab fa-google"></i>
+                            ceate yor accaun
+                            </button>
+
                     </div>
 
 
 
                 </div>
             </div>
+
+
+
+        </div>
+        </div>
         </div>
 
         <!-- fine vioport1  -->
