work designet for developers

--- a/index.html
+++ b/index.html
@@ -164,9 +164,14 @@
                             <button type="button" class="btn btn-primary btn-lg btn-block">create you accaunt</button>
                             <button type="button" class="btn btn-primary btn-lg btn-block">
                             
-                            <i class="fab fa-google"></i>
-                            ceate yor accaun
+                            <i class="fab fa-google "></i>
+                            ceate yor accaunt
                             </button>
+                            <p>
+                                by signging up you agree to the
+                                <a href="#">termes of service</a>
+
+                            </p>
 
                     </div>
 
@@ -193,7 +198,7 @@
                 <div class="row">
 
                     <div class="col-xs-12 debug">
-                        innovate
+                        innovate business trust digitalocean
                     </div>
                 </div>
 
@@ -205,27 +210,27 @@
                     </div>
                     <div class="col-xs-6 col-sm-2">
                         <!-- docker-git  -->
-                        <img src="" alt="docker">
+                        <img src="img/docker.svg" alt="docker">
                     </div>
                     <div class="col-xs-6 col-sm-2">
                         <!-- slack-wework -->
-                        <img src="" alt="gitlab">
+                        <img src="img/gitlab.svg" alt="gitlab">
                     </div>
                     <div class="col-xs-6 col-sm-2">
                         <!-- hashi2-splunk -->
-                        <img src="" alt="slack">
+                        <img src="img/slack.svg" alt="slack">
                     </div>
                     <div class="col-xs-6 col-sm-2">
                         <!-- docker-git  -->
-                        <img src="" alt="hashi">
+                        <img src="img/hashicorp.svg" alt="hashi">
                     </div>
                     <div class="col-xs-6 col-sm-2">
                         <!-- slack-wework -->
-                        <img src="" alt="wework">
+                        <img src="img/wework.svg" alt="wework">
                     </div>
                     <div class="col-xs-6 col-sm-2">
                         <!-- hashi2-splunk -->
-                        <img src="" alt="splunk">
+                        <img src="img/splunk.svg" alt="splunk">
                     </div>
                     <div class="col-xs-12">
                         <a href="#">View customer stories ></a>
@@ -253,12 +258,37 @@
 
                     </div>
 
-                    <div class="col-md-4 col-sm-4 col-xs-12 debug">ale</div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 debug">
+                        <img src="img/cluster-deploy.svg" alt="cluster">
+                        <h5>clust deploments</h5>
+                        <p>
+                            provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 debug">
+                        <img src="img/optimized-compute.svg" alt="opti">
+                        <h5>clust deploments</h5>
+                        <p>
+                            provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                        </p>
+
+                    </div>
 
 
-                    <div class="col-md-4  col-sm-4 col-xs-12 debug">ale</div>
-                    <div class="col-md-4  col-sm-4 col-xs-12 debug">ale</div>
+                    <div class="col-md-4  col-sm-4 col-xs-12 debug">
+                        <img src="img/one-click.svg" alt="one click">
+                        <h5>clust deploments</h5>
+                        <p>
+                            provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                        </p>
+                    </div>
+                    <div class="col-md-4  col-sm-4 col-xs-12 debug">
+                        <img src="img/global.svg" alt="global">
+                        <h5>clust deploments</h5>
+                        <p>
+                            provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                        </p>
+                    </div>
 
 
 
