--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
                         </h2>
                         <p>
-                            prove
+                            Build more and spend managing yourinfrastructure with our easy-to -use control panel api
                         </p>
                         <div class="item">
                             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -379,16 +379,37 @@
         <section id="businnes">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 text-center debug">
+                    <div class="col-xs-12 text-center ">
                         the features you businnes
                     </div>
 
                     <div class="container text-center">
                         <div class="row">
 
-                            <div class="col-xs-12 col-sm-4 col-md-4  debug">a</div>
-                            <div class="col-xs-12 col-sm-4 col-md-4  debug">b</div>
-                            <div class="col-xs-12 col-sm-4 col-md-4  debug">c</div>
+                            <div class="col-xs-12 col-sm-4 col-md-4  debug">
+                                <img src="img/pred-pricing.svg" alt="pred-pricing">
+                                <h5>clust deploments</h5>
+                                <p>
+                                    provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                                </p>
+                                <a href="#">pricing ></a>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 col-md-4  debug">
+                                <img src="img/pred-pricing.svg" alt="pred-pricing">
+                                <h5>clust deploments</h5>
+                                <p>
+                                    provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                                </p>
+                                <a href="#">support ></a>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 col-md-4  debug">
+                                <img src="img/pred-pricing.svg" alt="pred-pricing">
+                                <h5>clust deploments</h5>
+                                <p>
+                                    provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
+                                </p>
+                                <a href="#">security ></a>
+                            </div>
 
 
 
@@ -414,14 +435,29 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-xs-12 debug">
-                        service you costum
+                        service you costumers araund the word from 12 regions
 
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-sx-12 col-md-6 debug">sx</div>
-                    <div class="col-sx-12 col-md-6 debug">dx</div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        dx
+                    </div>
                 </div>
 
             </div>
