--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <!-- viport 6 service customers  -->
 
         <section id="service">
-            <div class="container text-center">
+            <div class="container ">
                 <div class="row">
                     <div class="col-xs-12 debug">
                         service you costumers araund the word from 12 regions
@@ -442,11 +442,35 @@
 
                 <div class="row">
                     <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
+                        <div class="col-xs-2 ">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <p>ams2</p>
+                                </div>
                             </div>
+
                         </div>
+                        <div class="col-xs-5 ">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <p>Amsredan,Netherlnands</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-xs-5 ">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <p>
+                                        Test speed >
+
+                                    </p>
+
+                                </div>
+                            </div>
+
+                        </div>
+
                     </div>
                     <div class="col-sx-12 col-md-6 debug">
                         <div class="panel panel-default">
@@ -456,7 +480,52 @@
                         </div>
                     </div>
                     <div class="col-sx-12 col-md-6 debug">
-                        dx
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-sx-12 col-md-6 debug">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                Basic panel example
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
