prove test speed

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                 <a href="#">pricing ></a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4  debug">
-                                <img src="img/pred-pricing.svg" alt="pred-pricing">
+                                <img src="img/" alt="pred-pricing">
                                 <h5>clust deploments</h5>
                                 <p>
                                     provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
