provw service costumers

--- a/index.html
+++ b/index.html
@@ -440,94 +440,109 @@
                     </div>
                 </div>
 
+
                 <div class="row">
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="col-xs-2 ">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <p>ams2</p>
-                                </div>
+                    <div class="col-sx-12 debug">
+                        <div class="row">
+                            <div class="col-xs-2 ">
+
+                                <p>ams2</p>
+
+                            </div>
+                            <div class="col-xs-5 ">
+
+
+
+                                <p>Amsredan,Netherlnands</p>
+
+
+
+
+
+
+                            </div>
+                            <div class="col-xs-4 ">
+
+
+                                <p>
+                                    Test speed >
+
+                                </p>
+
+
+
+
+
+
+
                             </div>
 
-                        </div>
-                        <div class="col-xs-5 ">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <p>Amsredan,Netherlnands</p>
-                                </div>
-                            </div>
 
                         </div>
-                        <div class="col-xs-5 ">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <p>
-                                        Test speed >
 
-                                    </p>
-
-                                </div>
-                            </div>
-
-                        </div>
 
                     </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
-                        </div>
 
-                    </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
-                        </div>
 
-                    </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
-                        </div>
 
-                    </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
-                        </div>
 
-                    </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
                         </div>
-
-                    </div>
-                    <div class="col-sx-12 col-md-6 debug">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                Basic panel example
-                            </div>
-                        </div>
-
                     </div>
                 </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
             </div>
 
