work in progres

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
             <div class="container">
                 <div class="row text-center">
 
-                    <div class="col-xs-12 col-md-6 debug ">
+                    <div class="col-xs-12 col-md-6  bg-white ">
                         <h1>
                             the simplest cloud platformfor developers & teams
 
                         </h1>
                         <p>We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more. </p>
                     </div>
-                    <div class="col-xs-12 col-md-6 debug ">
+                    <div class="col-xs-12 col-md-6 bg-white  ">
                         <h1>
                             Deploy you app in seconds.
                         </h1>
