--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                 <a href="#">pricing ></a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4  debug">
-                                <img src="img/" alt="pred-pricing">
+                                <img src="img/world-class.svg" alt="word">
                                 <h5>clust deploments</h5>
                                 <p>
                                     provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
@@ -403,7 +403,7 @@
                                 <a href="#">support ></a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4  debug">
-                                <img src="img/pred-pricing.svg" alt="pred-pricing">
+                                <img src="img/reliable-platform.svg" alt="reliable">
                                 <h5>clust deploments</h5>
                                 <p>
                                     provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
@@ -433,9 +433,9 @@
 
         <section id="service">
             <div class="container ">
-                <div class="row">
+                <div class="row text-center ">
                     <div class="col-xs-12 debug">
-                        service you costumers araund the word from 12 regions
+                        <h1>service you costumers araund the word from 12 regions</h1>
 
                     </div>
                 </div>
@@ -448,13 +448,13 @@
             <div class="row">
                 <div class="col-sx-12 col-md-6 debug">
                     <div class="row">
-                        <div class="col-xs-2  debug  ">
+                        <div class="col-xs-2    ">
 
                             <p>ams2</p>
 
                         </div>
 
-                        <div class="col-xs-5  debug  ">
+                        <div class="col-xs-5 text-center   ">
 
 
 
@@ -467,7 +467,7 @@
 
 
                         </div>
-                        <div class="col-xs-45 debug ">
+                        <div class="col-xs-45 text-right ">
 
 
                             <p>
