--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
 
 
         </div>
-        </div>
-        </div>
+
 
         <!-- fine vioport1  -->
 
@@ -448,26 +447,29 @@
             <div class="row">
                 <div class="col-sx-12 col-md-6 debug">
                     <div class="row">
-                        <div class="col-xs-2    ">
+                        <div class="col-xs-2   debug   ">
 
                             <p>ams2</p>
 
-                        </div>
-
-                        <div class="col-xs-5 text-center   ">
-
-
-
-
-                            <p>Amsredan,Netherlnands</p>
-
-
 
 
 
 
                         </div>
-                        <div class="col-xs-45 text-right ">
+                        <div class="col-xs-5  text-center   ">
+
+
+
+
+                            <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -485,9 +487,144 @@
 
 
                     </div>
+                    <div class="row">
+
+                    </div>
+
+
+
+
+
+
+
+
 
 
                 </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="row">
+                        <div class="col-xs-2   debug   ">
+
+                            <p>ams3</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5  text-center   ">
+
+
+
+
+                            <p>Amsredan, Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5   text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+                <div class="col-sx-12 col-md-6 debug">
+                    <div class="row">
+                        <div class="col-xs-2   debug   ">
+
+                            <p>ams3</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5  text-center   ">
+
+
+
+
+                            <p>Amsredan, Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5   text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+            </div>
 
 
 
