--- a/index.html
+++ b/index.html
@@ -445,51 +445,42 @@
 
             </div>
             <div class="row">
+
+                <!-- prima colonna  sx -->
+
                 <div class="col-sx-12 col-md-6 debug">
-                    <div class="row">
-                        <div class="col-xs-2   debug   ">
-
-                            <p>ams2</p>
 
 
 
+                    <div class="col-xs-2   debug   ">
 
-
-                        </div>
-                        <div class="col-xs-5  text-center   ">
-
-
-
-
-                            <p>Amsredan ,Netherlnands</p>
+                        <p>ams2</p>
 
 
 
-
-
-
-                        </div>
-                        <div class="col-xs-5   text-right ">
-
-
-                            <p>
-                                Test speed >
-
-                            </p>
-
-
-
-
-
-
-
-                        </div>
 
 
                     </div>
-                    <div class="row">
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
 
                     </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
 
 
 
@@ -497,49 +488,46 @@
 
 
 
+                    </div>
 
 
 
                 </div>
+
+                <!-- prima colonna dx -->
+
+
                 <div class="col-sx-12 col-md-6 debug">
-                    <div class="row">
-                        <div class="col-xs-2   debug   ">
 
-                            <p>ams3</p>
+                    <div class="col-xs-2   debug   ">
 
-
-
-
-
-                        </div>
-                        <div class="col-xs-5  text-center   ">
-
-
-
-
-                            <p>Amsredan, Netherlnands</p>
+                        <p>ams2</p>
 
 
 
 
 
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
 
-                        </div>
-                        <div class="col-xs-5   text-right ">
 
 
-                            <p>
-                                Test speed >
 
-                            </p>
+                        <p>Amsredan ,Netherlnands</p>
 
 
 
 
 
 
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
 
-                        </div>
+
+                        <p>
+                            Test speed >
+
+                        </p>
 
 
 
@@ -548,6 +536,8 @@
 
 
                     </div>
+
+
 
 
 
@@ -561,46 +551,43 @@
 
 
                 </div>
+
+
+
+
+                <!-- seconda colnna sx -->
+
                 <div class="col-sx-12 col-md-6 debug">
-                    <div class="row">
-                        <div class="col-xs-2   debug   ">
 
-                            <p>ams3</p>
+                    <div class="col-xs-2   debug   ">
 
-
-
-
-
-                        </div>
-                        <div class="col-xs-5  text-center   ">
-
-
-
-
-                            <p>Amsredan, Netherlnands</p>
+                        <p>ams3</p>
 
 
 
 
 
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
 
-                        </div>
-                        <div class="col-xs-5   text-right ">
 
 
-                            <p>
-                                Test speed >
 
-                            </p>
+                        <p>Amsredan ,Netherlnands</p>
 
 
 
 
 
 
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
 
-                        </div>
 
+                        <p>
+                            Test speed >
+
+                        </p>
 
 
 
@@ -621,7 +608,320 @@
 
 
 
+
+
                 </div>
+
+                <!-- seconda colonna dx  -->
+
+                <div class="col-sx-12 col-md-6 debug">
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>ams3</p>
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+                <!-- terza colonna sx  -->
+
+                <div class="col-sx-12 col-md-6 debug">
+
+
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>blr1</p>
+
+
+
+
+
+                    </div>
+
+
+
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>Bamngalore,india</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+                </div>
+
+                <!-- terza colonna dx -->
+
+                <div class="col-sx-12 col-md-6 debug">
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>blr1</p>
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>bangalore,india</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+                <!-- quarta colonna sx -->
+
+                <div class="col-sx-12 col-md-6 debug">
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>Lon1</p>
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>london,uk</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+                <!-- quarta colonna dx  -->
+                <div class="col-sx-12 col-md-6 debug">
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>lon1</p>
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>London,Uk</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+                <!-- quinta colonna sx  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
             </div>
@@ -629,7 +929,20 @@
 
 
 
-            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         </section>
 
