--- a/index.html
+++ b/index.html
@@ -895,6 +895,124 @@
 
                 <!-- quinta colonna sx  -->
 
+                <div class="col-sx-12 col-md-6 debug">
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>Nyc1</p>
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>New york,Usa</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+                <!-- quinta colonna dx  -->
+
+                <div class="col-sx-12 col-md-6 debug">
+
+                    <div class="col-xs-2   debug   ">
+
+                        <p>Nyc1</p>
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                        <p>New york, usa</p>
+
+
+
+
+
+
+                    </div>
+                    <div class="col-xs-5 debug  text-right ">
+
+
+                        <p>
+                            Test speed >
+
+                        </p>
+
+
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+
+
+                <!-- fine colonne  -->
+
+
 
 
 
